controllers/victoriametrics/vmauth/assets/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-monitoring-vmauth
  labels:
    app.kubernetes.io/component: victoriametrics
    app.kubernetes.io/part-of: monitoring
    app.kubernetes.io/managed-by: monitoring-operator
spec:
  tls: ~
  rules:
    - host: ""
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vmauth-k8s
                port:
                  number: 8427
